--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "bootstrap": "4.6.0",
     "classnames": "2.3.1",
     "full-icu": "1.3.4",
-    "next": "11.1.2",
+    "next": "latest",
     "next-redux-wrapper": "7.0.2",
     "photoswipe": "4.1.3",
     "query-string": "7.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "7.14.2",
     "react-input-range": "1.3.0",
     "react-intl": "5.20.10",
@@ -31,7 +31,8 @@
     "redux-devtools-extension": "2.13.9",
     "redux-thunk": "2.3.0",
     "sass": "1.32.12",
-    "slick-carousel": "1.8.1"
+    "slick-carousel": "1.8.1",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@types/classnames": "2.3.1",
