--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-input-range": "1.3.0",
     "react-intl": "5.20.10",
     "react-redux": "7.2.4",
-    "react-slick": "0.28.1",
+    "react-slick": "^0.28.1",
     "react-toastify": "8.0.2",
     "reactstrap": "8.9.0",
     "redux": "4.1.1",
