--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.4",
+    "axios": "^0.27.2",
     "bootstrap": "4.6.0",
     "classnames": "2.3.1",
     "full-icu": "1.3.4",
