--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "4.6.0",
     "classnames": "2.3.1",
+    "firebase": "^9.8.1",
     "full-icu": "1.3.4",
     "next": "11.1.2",
     "next-redux-wrapper": "7.0.2",
