--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "builder": "next build && next export",
     "start": "next start",
+    "preinstall": "npx npm-force-resolutions",
     "build-and-start": "next build && next start"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "full-icu": "1.3.4",
     "next": "11.1.2",
     "next-redux-wrapper": "7.0.2",
+    "npm-force-resolutions": "0.0.10",
     "photoswipe": "4.1.3",
     "query-string": "7.0.1",
     "react": "17.0.2",
