--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "preinstall": "npx npm-force-resolutions",
     "builder": "next build && next export",
     "start": "next start",
     "build-and-start": "next build && next start"
@@ -17,6 +18,7 @@
     "full-icu": "1.3.4",
     "next": "11.1.2",
     "next-redux-wrapper": "7.0.2",
+    "npm-force-resolutions": "0.0.10",
     "photoswipe": "4.1.3",
     "query-string": "7.0.1",
     "react": "17.0.2",
